# calc

./: DEVELOPMENT.md  Makefile  README.md  calc.cabal  stack.yaml
doc/: body.txt  manual.docx  skutecnost.txt
gio-0.13.1.1/: gio.cabal  gtk2hs_macros.h
glib-0.13.2.2/: glib.cabal  gtk2hs_macros.h
gtk-0.14.2/: gtk2hs_macros.h
gtk-0.14.2/Graphics/UI/Gtk/: Types.chs
pango-0.13.1.1/: gtk2hs_macros.h
pango-0.13.1.1/Graphics/Rendering/Pango/: Types.chs
src/: Lib.hs
src-benchmark/: Main.hs
src-exe/: Main.hs  calc.glade  calc.ui
src-nsis/: Installer.hs
src-test/: Main.hs
